# py-depends

./: .gitignore  README.CN.md  README.md  pyproject.toml  setup.cfg
docs/: conf.py  index.rst
src/depends_tools/: __init__.py  context.py  d_type.py  depends.py  resolver.py  util.py
src/py_depends/: __init__.py  call_factory.py  depends.py  utils.py
tests/test_async_dep/: test_async_dep.py  test_async_generate.py
tests/test_factory/: test_async.py  test_sync.py
tests/test_import/: test_import.py
tests/test_sqlalchemy_sqlite/: test.db  test_sqlite.py
tests/test_sync_dep/: test_sync_dep.py  test_sync_generate.py
