[metadata]
name = py-depends
version = 1.0.0
author = surp1us
description = A Python dependency injection framework, it's like fastapi.Depends
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JokerCrying/py-depends.git
project_urls =
    Bug Tracker = https://github.com/JokerCrying/py-depends/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src